# esp32-monitor-siren

./: .firebaserc  .gitattributes  .gitignore  CMakeLists.txt  README.md
.cursor/commands/: opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md
.github/workflows/: ci.yml
app_sirene/: README.md  firebase.json  pubspec.yaml
app_sirene/lib/: firebase_options.dart  main.dart
app_sirene/linux/: CMakeLists.txt
docs/: MANAGER_APP.md  PRODUCAO.md
firebase/: firestore.indexes.json  firestore.rules
main/: CMakeLists.txt  hardware.h  main.c  pzem_sensor.c  pzem_sensor.h  wifi_manager.c  wifi_manager.h
main/inc/: comm.h  control.h  firebase.h  mqtt_telemetry.h  pzem_sensor.h  wifi_manager.h
main/src/: comm.c  control.c  firebase.c  hardware.c  main.c  pzem_sensor.c  wifi_manager.c
scripts/: E2E_MQTT_EXPLORER.md  build_manager_windows.ps1  build_windows_all.ps1  build_windows_installer.ps1  build_windows_release.ps1  build_windows_release.sh  ci_local.sh  e2e_verificacao_completa.sh  flutter_dev.ps1  flutterfire_only.sh  migrate_firestore_lote_serial.js  package-lock.json  package.json  setup_firebase.sh  sync_dist.ps1  test_laser_tcp.ps1  windows_build_common.ps1
sirene-validator/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
sirene-validator/host_tests/: CMakeLists.txt  test_batch_quota.c  test_batch_retest.c  test_batch_validation.c  test_fifo.c  test_fsm.c  test_main.c  test_serial.c  test_url.c  test_verdict.c
sirene_app/: README.md  firebase.json  pubspec.yaml
sirene_manager_app/: pubspec.yaml
(+675 files in other folders)
